fixed the overflow and made animation biderctional

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,10 +20,13 @@ html{
 main{
     @include flex(column, center);
 }
+body,html{
+    overflow-x: hidden;
+}
 .hidden1{
     opacity: 0;
     transform: translateX(-100%);
-    transition: all 0.7s;
+    transition: all 1s;
 }
 .hidden2{
     opacity: 0;
